# Script-Automator

./: .gitignore  README.md  ffigen.yaml  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt
ios/: Podfile
ios/Classes/: jsc_wrapper.c
ios/Runner/: AppDelegate.swift  Info.plist  Runner.entitlements
ios/Runner.xcodeproj/: project.pbxproj
ios/ScriptAutomatorWidget/: ScriptAutomatorWidgetControl.swift  UniversalWidgetView.swift
ios/WidgetExtension_Code/: SASUPModels.swift  ScriptAutomatorWidget.swift  UniversalWidgetView.swift
lib/: hive_registrar.g.dart  main.dart
lib/features/script_engine/data/engines/: jsc_engine.dart  quickjs_engine.dart
lib/features/script_engine/domain/: host_object_registry.dart  js_engine.dart  js_engine_exception.dart  script_runner_service.dart
lib/features/script_engine/native_bridge/: ffi_jsc_bindings.dart  ffi_quickjs_bindings.dart  ffi_quickjs_bindings.dart.bak
lib/features/script_management/data/datasources/: script_local_data_source.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native/: quickjs_wrapper.c
test/: dual_store_test.dart  headless_pipeline_test.dart  sasup_schema_test.dart  vfs_security_test.dart  widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+30 files in other folders)
